# libsni-exporter

./: PKGBUILD  README.md  README.ru.md  meson.build
examples/: Makefile  minimal-tray  minimal-tray.c
src/: meson.build  sni-exporter.c  sni-exporter.h
tests/: meson.build  test_menu.c
vapi/: sni-exporter.vapi
